--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,7 +27,7 @@ body {
   height: 4rem;
   flex-direction: row;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   border-bottom: 1px solid #e2e2e2;
   background-color: #fff;
   z-index: 1000;
@@ -38,7 +38,7 @@ body {
   border: none;
   background-color: #fff;
   cursor: pointer;
-  margin-right: 3rem;
+  margin-right: 1.5rem;
 }
 
 .header__btn:hover {
@@ -51,6 +51,13 @@ body {
 
 .icon-1 {
   font-size: 1.5rem;
+  color: #121212;
+  margin-left: 1.5rem;
+}
+
+.icon-2 {
+  font-size: 1.5rem;
+  color: #121212;
 }
 
 .header__text {
@@ -99,6 +106,10 @@ body {
   font-weight: 500;
   font-size: 1.2rem;
   letter-spacing: 0.5px;
+}
+
+.btn-mar {
+  margin-right: 1.5rem;
 }
 
 .btn:active {
@@ -364,10 +375,16 @@ article h1 {
   margin: 2rem 0;
 }
 
-.suggested-right {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 2rem;
+.row-1 {
+  float: left;
+  margin-right: 2.5rem;
+  margin-bottom: 1rem;
+}
+
+.row-2 {
+  float: left;
+  margin-right: 2.5rem;
+  margin-bottom: 1rem;
 }
 
 .suggested-img {
@@ -376,7 +393,7 @@ article h1 {
 }
 
 .suggested-title {
-  width: 25rem;
+  width: 30rem;
   margin-top: 1rem;
   margin-bottom: 0.5rem;
 }
@@ -530,6 +547,7 @@ nav {
   justify-content: space-around;
   align-items: center;
   height: 5rem;
+  margin-bottom: 5rem;
 }
 
 .footer-end-a {
@@ -555,6 +573,34 @@ nav {
 
 .footer__list-sub > li > a:hover {
   text-decoration: underline;
+}
+
+.footer-bottom {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  height: 5rem;
+  width: 100%;
+  background-color: #fff;
+  border-top: 1px solid #121212;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.footer-bottom-text {
+  font-size: 1.5rem;
+}
+
+.last-a {
+  text-decoration: none;
+  color: #121212;
+}
+
+.last-a:hover {
+  text-decoration: underline;
+  color: #666;
 }
 
 /* footer section ends here */
