fixed css errors.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -436,7 +436,7 @@ article h1 {
 .card__img-text-2 {
   font-size: 1.5rem;
   color: #121212;
-  margin-top: .2rem;
+  margin-top: 0.2rem;
   font-weight: bold;
 }
 
